--- a/VideoTranscriberApp.BlazorUI/VideoTranscriberApp.BlazorUI.Client/VideoTranscriberApp.BlazorUI.Client.csproj
+++ b/VideoTranscriberApp.BlazorUI/VideoTranscriberApp.BlazorUI.Client/VideoTranscriberApp.BlazorUI.Client.csproj
@@ -9,7 +9,23 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Content Remove="Components\PremadeComponents.razor" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="8.0.5" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <UpToDateCheckInput Remove="Components\PremadeComponents.razor" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <_ContentIncludedByDefault Remove="Components\PremadeComponents.razor" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="Components\PremadeComponents.razor" />
   </ItemGroup>
 
 </Project>
