--- a/VideoTranscriberApp.BlazorUI/VideoTranscriberApp.BlazorUI.Client/VideoTranscriberApp.BlazorUI.Client.csproj
+++ b/VideoTranscriberApp.BlazorUI/VideoTranscriberApp.BlazorUI.Client/VideoTranscriberApp.BlazorUI.Client.csproj
@@ -13,6 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="BlazorDownloadFile" Version="2.4.0.2" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="8.0.5" />
   </ItemGroup>
 
