--- a/VideoTranscriberApp.BlazorUI/VideoTranscriberApp.BlazorUI/VideoTranscriberApp.BlazorUI.csproj
+++ b/VideoTranscriberApp.BlazorUI/VideoTranscriberApp.BlazorUI/VideoTranscriberApp.BlazorUI.csproj
@@ -12,4 +12,8 @@
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="8.0.5" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Models\" />
+  </ItemGroup>
+
 </Project>
