--- a/VideoTranscriberApp.BlazorUI/VideoTranscriberApp.BlazorUI/VideoTranscriberApp.BlazorUI.csproj
+++ b/VideoTranscriberApp.BlazorUI/VideoTranscriberApp.BlazorUI/VideoTranscriberApp.BlazorUI.csproj
@@ -10,6 +10,7 @@
     <ProjectReference Include="..\VideoTranscriberApp.BlazorUI.Client\VideoTranscriberApp.BlazorUI.Client.csproj" />
     <PackageReference Include="Betalgo.OpenAI" Version="8.6.1" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="8.0.5" />
+    <PackageReference Include="Xabe.FFmpeg" Version="5.2.6" />
   </ItemGroup>
 
 </Project>
